--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
+  overflow: hidden;
 }
