자잘한 파일 delete

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
   display: flex;
   place-items: center;
   overflow: hidden;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 #container {
