--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;  /* 텍스트 블록 줄 간격 */
-  font-weight: 400;
+  /* font-weight: 400; */
   text-align: center;
 
-  color-scheme: light;  /* 라이트 모드만 지원 */
-  background-color: #fafafa;
+  /* color-scheme: light;  라이트 모드만 지원 */
+  /* background-color: #fafafa; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
