버튼 누른 티나는거 구현

--- a/src/index.css
+++ b/src/index.css
@@ -199,3 +199,12 @@ body {
 #contextMenu button:hover {
   background-color: lightgray;
 }
+
+.btn-active {
+  box-shadow: inset 0px 9px 4px 6px dimgrey;
+  border-radius: 10%;
+}
+
+.btn-active svg{
+  color: black !important;
+}
