색 채우기 오류 수정

--- a/src/index.css
+++ b/src/index.css
@@ -205,6 +205,9 @@ body {
   color : white;
   cursor: pointer;
 }
+#contextMenu .disabled{
+  color : rgb(141, 141, 141);
+}
 
 #contextMenu button:hover {
   background-color: lightgray;
